fix: align homepage text correctly for tall screens

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -2,6 +2,7 @@
     flex: 0 0 auto;
     height: 100px;
     display: flex;
+    text-align: center;
 }
 
 .footer p {
